--- a/lib/todo.css
+++ b/lib/todo.css
@@ -1,22 +1,72 @@
-body {
-	  background-color: #BDB76B;
-     }
 h1   {
-		color: SaddleBrown;
-		background-color: white;
-		font-size: 35px;
+		color: black;
+		font-size: 50px;
+        text-align: center;
      }
 
-form {
-    display: inline-block;
+body {
+    background-color: grey;
+    border: 10 ;
+    text-align: center;
 }
 
-}
-#todo {
-    margin: 0 auto;
-    width: 500px;
+.tain {
+    width: 50%;
+    float: right;
+    margin: 0 5px;
+    background-color: dimgray;
+    min-height: 300px;
+    border-radius: 15px;
+    padding-bottom: 20px;
+    text-align: center;
+    font-size: 18px;
 }
 
-a.close {
-  float: right;
+.tion {
+    width: 100%;
+    margin: 0 5px;
+    background-color: lightgrey;
+    min-height: 50px;
+    border-radius: 15px;
+    padding-bottom: 20px;
+    text-align: center;
+    font-family: Georgia;
+    font-size: 20px;
+}
+
+.cont {
+    width: 40%;
+    float: left;
+    margin: 0 5px;
+    background-color: darkgray;
+    min-height: 140px;
+    border-radius: 15px;
+    padding-bottom: 20px;
+    font-weight: bold;
+    text-align: center;
+    font-size: 20px;
+}
+ul {
+    list-style: none; 
+    padding: 0; 
+    margin: 0; 
+    width: 675px;
+}
+
+li {
+    border: 1px solid #ccc; 
+    background: #ccc; 
+    padding: 5px 10px; 
+    color: #000;
+}
+
+li span {
+    padding-left: 10px;
+    cursor: default;
+}
+
+.checked {
+    text-decoration: line-through;
+    color: crimson;
+    font-weight: bold;
 }
